[package]
name = "array_tool"
version = "0.3.9"
authors = ["Daniel P. Clark <6ftdan@gmail.com>"]
description = "Helper methods for processing collections"
documentation = "http://danielpclark.github.io/array_tool/index.html"
homepage = "https://github.com/danielpclark/array_tool"
repository = "https://github.com/danielpclark/array_tool"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["vector","string","str","justify","word wrap","grapheme","squeeze","intersect","unique","substitution"]
categories = ["text-processing", "data-structures", "value-formatting"]

[badges]
travis-ci = { repository = "https://github.com/danielpclark/array_tool", branch = "master" }
